[movies] show vertical scroll always to prevent page shifting

--- a/src/main/webapp/style/style.less
+++ b/src/main/webapp/style/style.less
@@ -13,6 +13,7 @@
 body {
   font-family: bodyFont;
   height: auto;
+  overflow-y: scroll;
 }
 
 #main {
